<resources>
    <string name="app_name">Backing Time</string>
    <string name="error_msg">Could not load recipes!\nPlease check your internet connection</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="appwidget_text">Ingredients will appear here after selecting a recipe</string>
    <string name="add_widget">Add widget</string>
</resources>
